	Fixed bug where empty paragraphs didn't work as expected in browsers other than IE.
	Fixed bug where the load method of the tinymce.dom.ScriptLoader didn't check if the file was already loaded.
	Fixed bug where the load method for the PluginManager and ThemeManager didn't check if a plugin/theme by a specific name was all ready loaded.
	Fixed bugs with the backspace behavior in Gecko. The caret was placed on incorrect locations in the DOM sometimes.
	Fixed so advimage dialog and table dialogs has support for editable select boxes for the class value.
Version 3.0.5 (2008-03-12)
	Added new black skin variant to the o2k7 skin contributed by Stefan Moonen.
	Added new explode method to the tinymce core class. This does a split but removed whitespace it also defaults to a , delimiter.
	Added new detection logic for IE 8 standards mode into the DOMUtils class strMode can now be checked to see if that mode is on/off.
	Added new noscale option value for the scale select box for Flash in the media plugin.
	Fixed bug where the menu for the ColorSplitButton wasn't removed when the editor was removed.
	Fixed bug where font colors couldn't be edited correctly since the style of the element didn't get updated correctly.
	Fixed bug where class of elements would get lost when TinyMCE was fixing incorrect HTML markup.
	Fixed bug where table editing would produce double height values.
	Fixed bug where width style value wouldn't be removed if you switched width unit from cm/em to pixels or percent.
	Fixed bug where the search/replace input box wasn't auto focused like the other dialogs.
	Fixed bug where the old mceAddControl command would use the fullscreen settings next time it created an instance.
	Fixed bug where multiple lines where added to the target cell if you merged multiple empty cells.
	Fixed bug where drop down menus would be incorrectly positioned inside scrollable divs.
	Fixed bug where the separators of the silver skin variant didn't display correctly in IE 6.