@@ -116,7 +116,7 @@ var LinkDialog = {
 		if (v = tinyMCEPopup.getParam('theme_advanced_link_targets')) {
 			tinymce.each(v.split(','), function(v) {
 				v = v.split('=');
-				html += '<option value="' + v[1] + '">' + v[0] + '</option>';
+				lst.options[lst.options.length] = new Option(v[0], v[1]);
 			});
 		}
 	}
